2004-11-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (__mloop_get_event):
	* fvwm/functions.c (execute_complex_function):
	* fvwm/add_window.c (AddWindow):
	* fvwm/module_interface.c (ExecuteModuleCommand):
	* fvwm/move_resize.c (__move_loop):
	(__resize_window):
	properly set the "state" member of faked motion and key events;
	fixes broken "nosnap" feature

2004-10-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/bindings.c (ParseBinding):
	reformatted
	* libs/Bindings.c (bindingAppliesToWindow):
	(__compare_binding):
	* fvwm/module_interface.c (CMD_ModuleSynchronous):
	* fvwm/builtins.c (CMD_Wait):
	(CMD_StrokeFunc):
	* fvwm/events.c (__handle_bpress_on_root):
	(HandleButtonRelease):
	fixed crash in window specific binding code
	fixed handling of root window in window specific binding code
	renamed some functions

2004-10-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (__update_windowlist):
	replaced while loop by for loop

	* fvwm/style.c (style_destroy_style):
	* fvwm/conditional.c (Circulate):
	removed useless check whether fw == &Scr.FvwmRoot

	* fvwm/icons.c (DeIconify):
	defused possible endless loop when a window iconified by the
	transientfor window loses the "transient" relationship

2004-10-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (__move_loop):
	(__resize_window):
	fixed overwriting the initial button_mask during move/resize

	* fvwm/menus.c (__mloop_handle_action_with_mi):
	do not "post" a submenu menu item it the submenu does not exist

2004-10-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (__handle_bpress_on_managed):
	do not draw the decorations pressed in if executing a function is
	forbidden

	* libs/Parse.c (CopyToken):
	fixed parsing of delimiters

2004-10-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (GetDeskNumber):
	fixed MoveToDesk without argument

2004-10-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	re-formatted and some spelling corrections
