@@ -1,3 +1,7 @@
+2004-11-30  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/fvwm.1.in: Fix keysym description add XKeysymDB.
+
 2004-11-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menus.c (__mloop_get_event):
